--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
+aiofiles==0.6.0
+appdirs==1.4.4
+blinker==1.4
 click==7.1.2
-Flask==1.1.2
-Flask-Cors==3.0.9
-gunicorn==20.0.4
+h11==0.11.0
+h2==4.0.0
+hpack==4.0.0
+Hypercorn==0.11.1
+hyperframe==6.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-six==1.15.0
+priority==1.3.0
+pyee==7.0.4
+pyppeteer==0.2.2
+Quart==0.14.1
+Quart-CORS==0.3.0
+toml==0.10.2
+tqdm==4.54.1
+urllib3==1.26.2
+websockets==8.1
 Werkzeug==1.0.1
+wsproto==1.0.0
