Switch from Minio to boto3

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ appdirs==1.4.4
 async-timeout==3.0.1
 attrs==21.2.0
 blinker==1.4
+boto3==1.19.2
+botocore==1.22.2
 certifi==2021.5.30
 chardet==4.0.0
 click==8.0.1
@@ -15,15 +17,18 @@ hyperframe==6.0.1
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
 MarkupSafe==2.0.1
-minio==7.1.0
 multidict==5.1.0
 priority==2.0.0
 pyee==8.1.0
 pyppeteer==0.2.5
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 Quart==0.15.1
 Quart-CORS==0.5.0
+s3transfer==0.5.0
+six==1.16.0
 toml==0.10.2
 tqdm==4.62.0
 typing-extensions==3.10.0.0
